--- a/index.html
+++ b/index.html
@@ -89,14 +89,20 @@
   </section>
 
   <!-- FOTOS -->
-  <section class="section" id="fotos">
-    <h2>Fotos del lugar</h2>
-    <div class="gallery grid-3">
-      <img src="https://images.unsplash.com/photo-1493558103817-58b2924bce98?q=80&w=1200" alt="Vista 1">
-      <img src="https://images.unsplash.com/photo-1496412705862-e0088f16f791?q=80&w=1200" alt="Vista 2">
-      <img src="https://images.unsplash.com/photo-1529694157871-0b5c0dff7c33?q=80&w=1200" alt="Vista 3">
-    </div>
-  </section>
+ <!-- FOTOS -->
+<section class="section" id="fotos">
+  <h2>Fotos del lugar</h2>
+  <div class="gallery grid-3">
+    <img src="images/1.HEIC" alt="Salón principal – vista 1">
+    <img src="images/2.HEIC" alt="Salón principal – vista 2">
+    <img src="images/3.HEIC" alt="Pileta y quincho – vista 3">
+    <img src="images/4.HEIC" alt="Vista 4 del salón">
+    <img src="images/5.HEIC" alt="Vista 5 del salón">
+    <img src="images/6.HEIC" alt="Vista 6 del salón">
+    <img src="images/7.HEIC" alt="Vista 7 del salón">
+    <img src="images/8.HEIC" alt="Vista 8 del salón">
+  </div>
+</section>
 
   <!-- TARJETAS -->
   <section class="section" id="comprar">
