--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="#comprar" class="btn btn-primary">Ver tarjetas</a>
         <a href="#form" class="btn btn-outline">Confirmar presencia</a>
       </div>
-      <p class="note">* El alcohol lo lleva cada uno. El costo del quincho se prorratea entre todos.</p>
+      <p class="note">* LLevar las bebidas alcoholicas a consumir</p>
     </div>
 
     <div class="neon-card">
@@ -106,7 +106,7 @@
 
   <!-- TARJETAS -->
   <section class="section" id="comprar">
-    <h2 class="center">Elegí tu tarjeta</h2>
+    <h2 class="center">Compra tu tarjeta</h2>
     <div class="buy-grid">
       <div class="neon-card buy-card">
         <h3>🌙 Tarjeta Noche</h3>
@@ -117,7 +117,7 @@
           <li>🥤 Bebidas sin alcohol</li>
           <li>🎶 Música y luces</li>
         </ul>
-        <a href="#form" class="btn btn-primary">Confirmar presencia</a>
+        <a href="#form" class="btn btn-primary">Comprar Tarjeta</a>
       </div>
       <div class="neon-card buy-card">
         <h3>☀️ Full Pass</h3>
@@ -128,26 +128,13 @@
           <li>🥤 Bebidas sin alcohol + postres</li>
           <li>🎶 Música nocturna</li>
         </ul>
-        <a href="#form" class="btn btn-primary">Confirmar presencia</a>
+        <a href="#form" class="btn btn-primary">Comprar Tarjeta</a>
       </div>
     </div>
     <p class="note center">* El alcohol lo lleva cada uno.</p>
   </section>
 
-  <!-- FORM -->
-  <section class="section center" id="form">
-    <div class="neon-card" style="display:inline-block; max-width:760px; text-align:left">
-      <h2>Confirmar presencia</h2>
-      <p class="lead">
-        Completá el formulario para elegir tu tipo de tarjeta y confirmar tu asistencia al evento.
-      </p>
-      <div class="cta-buttons">
-        <a id="linkForm" class="btn btn-primary" target="_blank" rel="noopener">Ir al Google Form</a>
-        <a href="#comprar" class="btn btn-outline">Volver a tarjetas</a>
-      </div>
-      <p class="note">Si necesitás ayuda, contactate con el comité organizador.</p>
-    </div>
-  </section>
+
 
   <!-- FOOTER -->
   <footer>
