--- a/index.html
+++ b/index.html
@@ -34,20 +34,45 @@
   <main class="wrap">
     <!-- ====== INFO RÁPIDA ====== -->
     <section id="info" class="section">
-      <div class="card neon-once">
-        <h2 class="script">Datos clave</h2>
-        <ul class="clean">
-          <li><b>Cuándo:</b> Domingo 14 de diciembre</li>
-          <li><b>Horario:</b> 12:00 a 04:00 hs</li>
-          <li><b>Dónde:</b> Quincho en Marcos Avellaneda 1125, San Miguel de Tucumán</li>
-        </ul>
-      </div>
 
       <div class="card glass">
         <h2 class="script center">Cuenta regresiva</h2>
         <div id="timer" class="timer" aria-live="polite"></div>
       </div>
     </section>
+
+<!-- ====== FECHA ====== -->
+<section class="section" id="fecha">
+  <div class="icon-card glass center">
+    <div class="icon-emoji" aria-hidden="true">📅</div>
+    <h2 class="section-title">FECHA</h2>
+    <p class="lead">
+      <b>Domingo 14 de diciembre</b><br>
+    </p>
+
+    <!-- Botón: Agregar al calendario (Google Calendar) -->
+    
+  </div>
+</section>
+
+<!-- ====== LUGAR ====== -->
+<section class="section" id="lugar">
+  <div class="icon-card glass center">
+    <div class="icon-emoji" aria-hidden="true">📍</div>
+    <h2 class="section-title">LUGAR</h2>
+    <p class="lead">
+      Quincho – <b>Marcos Avellaneda 1125</b><br>
+      San Miguel de Tucumán
+    </p>
+
+    <div class="cta-buttons" style="justify-content:center">
+      <a class="btn btn-ghost" target="_blank" rel="noopener"
+         href="https://www.google.com/maps?q=Marcos+Avellaneda+1125,+San+Miguel+de+Tucum%C3%A1n">
+        Ver en Google Maps
+      </a>
+    </div>
+  </div>
+</section>
 
     <!-- ====== IDEA + PROGRAMA ====== -->
     <section class="section">
@@ -75,17 +100,6 @@
             <li><b>04:00</b> Cierre</li>
           </ul>
         </div>
-      </div>
-    </section>
-
-    <!-- ====== LUGAR ====== -->
-    <section class="section" id="lugar">
-      <div class="card glass">
-        <h2 class="script">Lugar</h2>
-        <p class="lead">📍 <b>Marcos Avellaneda 1125, San Miguel de Tucumán</b></p>
-        <iframe class="mapa"
-          src="https://maps.google.com/maps?q=Marcos%20Avellaneda%201125%20San%20Miguel%20de%20Tucum%C3%A1n&t=&z=15&ie=UTF8&iwloc=&output=embed"
-          loading="lazy"></iframe>
       </div>
     </section>
 
