--- a/index.html
+++ b/index.html
@@ -78,25 +78,12 @@
     <section class="section">
       <div class="grid-2">
         <div class="card glass">
-          <h2 class="script">La idea</h2>
-          <p class="lead">
-            Cerramos el año con un día completo de equipo, relax y agradecimiento.
-            Asado al mediodía, pileta, sobremesa larga y, por la noche, cena con música y luces.
-          </p>
-          <ul class="clean">
-            <li>🤝 Camaradería</li>
-            <li>🍖 Asado mediodía + noche</li>
-            <li>🏊‍♂️ Pileta</li>
-            <li>🎶 Fiesta</li>
-          </ul>
-        </div>
-        <div class="card glass">
           <h2 class="script">Programa</h2>
           <ul class="clean">
-            <li><b>12:00</b> Recepción y almuerzo</li>
-            <li><b>15:00</b> Pileta y descanso</li>
-            <li><b>20:00</b> Cena principal</li>
-            <li><b>22:30</b> Brindis y música</li>
+            <li><b>Mediodía</b> Recepción y almuerzo</li>
+            <li><b>Siesta/Tarde</b> Pileta y Juegos</li>
+            <li><b>22:00</b> Cena principal</li>
+            <li><b>22:30</b> Brindis y Fiesta</li>
             <li><b>04:00</b> Cierre</li>
           </ul>
         </div>
@@ -105,13 +92,12 @@
 
     <!-- ====== FOTOS ====== -->
     <section class="section" id="fotos">
-      <h2 class="script">Fotos del lugar</h2>
+      <h2 class="script">Fotos del Quincho</h2>
       <div class="gallery grid-3">
         <img src="images/1.HEIC" alt="Salón 1">
         <img src="images/2.HEIC" alt="Salón 2">
         <img src="images/3.HEIC" alt="Salón 3">
       </div>
-      <p class="note">Tip: si ves que .HEIC no carga en algunos navegadores, exportalas a .jpg y actualizá las rutas.</p>
     </section>
 
     <!-- ====== TARJETAS ====== -->
@@ -151,20 +137,7 @@
       <p class="note center">* El alcohol lo lleva cada uno.</p>
     </section>
 
-    <!-- ====== FORM ====== -->
-    <section class="section center" id="form">
-      <div class="card glass" style="display:inline-block;max-width:760px;text-align:left">
-        <h2 class="script">Confirmar presencia</h2>
-        <p class="lead">Completá el formulario para elegir tarjeta, modalidad de pago y subir tu comprobante.</p>
-        <div class="cta-buttons">
-          <a class="btn btn-primary" target="_blank" rel="noopener"
-             href="https://docs.google.com/forms/d/e/1FAIpQLSfWE52CjsRZmHsUFqirzqL0tHlfIKmvZOsJokxjuitqI1ZtSQ/viewform">
-             Ir al Google Form
-          </a>
-          <a href="#comprar" class="btn btn-outline">Volver a tarjetas</a>
-        </div>
-      </div>
-    </section>
+    
   </main>
 
   <footer>© 2025 Aeropuerto Tucumán · Organización del Evento</footer>
