--- a/index.html
+++ b/index.html
@@ -91,14 +91,24 @@
     </section>
 
     <!-- ====== FOTOS ====== -->
-    <section class="section" id="fotos">
-      <h2 class="script">Fotos del Quincho</h2>
-      <div class="gallery grid-3">
-        <img src="images/1.HEIC" alt="Salón 1">
-        <img src="images/2.HEIC" alt="Salón 2">
-        <img src="images/3.HEIC" alt="Salón 3">
-      </div>
-    </section>
+    <!-- ====== SECCIÓN FOTOS ====== -->
+<section class="section" id="fotos">
+  <div class="icon-card glass center">
+    <div class="icon-emoji" aria-hidden="true">📸</div>
+    <h2 class="section-title">FOTOS DEL LUGAR</h2>
+  </div>
+
+  <div class="photo-gallery">
+    <img src="images/1.HEIC" alt="Foto del quincho 1">
+    <img src="images/2.HEIC" alt="Foto del quincho 2">
+    <img src="images/3.HEIC" alt="Foto del quincho 3">
+    <img src="images/4.HEIC" alt="Foto del quincho 4">
+    <img src="images/5.HEIC" alt="Foto del quincho 5">
+    <img src="images/6.HEIC" alt="Foto del quincho 6">
+    <img src="images/7.HEIC" alt="Foto del quincho 7">
+    <img src="images/8.HEIC" alt="Foto del quincho 8">
+  </div>
+</section>
 
     <!-- ====== TARJETAS ====== -->
     <section class="section" id="comprar">
