--- a/index.html
+++ b/index.html
@@ -101,12 +101,15 @@
   <div class="photo-gallery">
     <img src="images/1.HEIC" alt="Foto del quincho 1">
     <img src="images/2.HEIC" alt="Foto del quincho 2">
-    <img src="images/3.HEIC" alt="Foto del quincho 3">
-    <img src="images/4.HEIC" alt="Foto del quincho 4">
-    <img src="images/5.HEIC" alt="Foto del quincho 5">
-    <img src="images/6.HEIC" alt="Foto del quincho 6">
     <img src="images/7.HEIC" alt="Foto del quincho 7">
-    <img src="images/8.HEIC" alt="Foto del quincho 8">
+    <img src="images/4.HEIC" alt="Foto del quincho 4">
+    <img src="images/3.jpg" alt="Foto del quincho 3">
+    <img src="images/5.jpg" alt="Foto del quincho 5">
+    <img src="images/6.jpg" alt="Foto del quincho 6">
+    <img src="images/8.jpg" alt="Foto del quincho 8">
+    <img src="images/9.jpg" alt="Foto del quincho 9">
+    <img src="images/10.jpg" alt="Foto del quincho 10">
+
   </div>
 </section>
 
