--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
   </div>
 
   <div class="photo-gallery">
-    <img src="images/1.HEIC" alt="Foto del quincho 1">
-    <img src="images/2.HEIC" alt="Foto del quincho 2">
-    <img src="images/7.HEIC" alt="Foto del quincho 7">
-    <img src="images/4.HEIC" alt="Foto del quincho 4">
+    <img src="images/1.jpg" alt="Foto del quincho 1">
+    <img src="images/2.jpg" alt="Foto del quincho 2">
+    <img src="images/7.jpg" alt="Foto del quincho 7">
+    <img src="images/4.jpg" alt="Foto del quincho 4">
     <img src="images/3.jpg" alt="Foto del quincho 3">
     <img src="images/5.jpg" alt="Foto del quincho 5">
     <img src="images/6.jpg" alt="Foto del quincho 6">
