--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <!-- ====== FOTOS ====== -->
     <!-- ====== SECCIÓN FOTOS ====== -->
-<section class="section" id="fotos">
+<section class="" id="fotos">
   <div class="icon-card glass center">
     <div class="icon-emoji" aria-hidden="true">📸</div>
     <h2 class="section-title">FOTOS DEL LUGAR</h2>
@@ -174,7 +174,7 @@
 
 
     <!-- ====== TARJETAS ====== -->
-    <section class="section" id="tarjetas">
+    <section class="" id="tarjetas">
   <h2 class="section-title">Elegí tu tarjeta</h2>
 
   <div class="cards-container">
