--- a/index.html
+++ b/index.html
@@ -242,6 +242,19 @@
   </p>
 </div>
     
+<section class="section">
+  <div class="wrap center">
+    <h2 class="section-title">PLAYLIST OFICIAL</h2>
+    <p>🎧 Poné play y empezá a vivir la fiesta del 14D desde ahora.</p>
+
+    <iframe style="border-radius:12px"
+      src="https://open.spotify.com/embed/playlist/4E9RqxERKtGgLVTZs0UoSw?utm_source=generator"
+      width="100%" height="380" frameborder="0"
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+      loading="lazy">
+    </iframe>
+  </div>
+</section>
 
   </main>
 
