--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <!-- Reproductor oculto -->
 <audio id="bgMusic" preload="auto" loop playsinline>
-  <source src="./audio/paranoid.mp3" type="audio/mpeg">
+  <source src="./audio/marimba.mp3" type="audio/mpeg">
   <!-- <source src="audio/tema.ogg" type="audio/ogg">  opcional -->
 </audio>
   </header>
